<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jetmax_demo_3</name>
  <version>0.0.0</version>
  <description>Demonstration 3: waits for object to enter field of grasp for robot and moves to object with active tracking and path planning.</description>
  <maintainer email="roberts2561@gmail.com">Ryan Roberts</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <exec_depend>jetmax_msgs</exec_depend>
  <exec_depend>optitrack_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
</package>
